--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,17 @@
           <a class="nav-link" href="/materials">Materials</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="/feats">Feats</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-success active">
+          <input id="official_button" type="checkbox" checked="" autocomplete="off"> Official
+        </label>
+      </div>
       <%# <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
@@ -49,3 +54,9 @@
     </div>
   </body>
 </html>
+
+<script>
+  $('#official_button').change(function() {
+    alert( "changed." );
+  });
+</script>
